[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/MoonWorld/MoonWorld.gd" type="Script" id=1]
[ext_resource path="res://addons/zylann.hterrain/hterrain_texture_set.gd" type="Script" id=2]
[ext_resource path="res://Data/Moon/data.hterrain" type="Resource" id=3]
[ext_resource path="res://Scenes/Player/RigidBodyPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/zylann.hterrain/hterrain.gd" type="Script" id=5]

[sub_resource type="Resource" id=1]
script = ExtResource( 2 )
mode = 0
textures = [ [  ], [  ] ]

[sub_resource type="PanoramaSky" id=7]

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 7 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.1

[node name="MoonWorld" type="Spatial"]
script = ExtResource( 1 )

[node name="MoonHTerrain" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -512, 0, -512 )
script = ExtResource( 5 )
lod_scale = 2.0
_terrain_data = ExtResource( 3 )
chunk_size = 32
collision_enabled = true
collision_layer = 1
collision_mask = 1
shader_type = "Classic4Lite"
custom_shader = null
custom_globalmap_shader = null
texture_set = SubResource( 1 )
render_layers = 1
shader_params/u_ground_uv_scale = 20
shader_params/u_depth_blending = true
shader_params/u_triplanar = false
shader_params/u_tile_reduction = Plane( 0, 0, 0, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 50, 0 )
shadow_enabled = true
shadow_bias = 0.05

[node name="Player" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -443.464, -94.8268, -460.589 )

[connection signal="camera_x_rotated" from="Player" to="." method="_on_Player_camera_x_rotated"]
[connection signal="camera_y_reset" from="Player" to="." method="_on_Player_camera_y_reset"]
[connection signal="camera_y_rotated" from="Player" to="." method="_on_Player_camera_y_rotated"]
[connection signal="left_foot_grounded" from="Player" to="." method="_on_Player_left_foot_grounded"]
[connection signal="oxygen_picked_up" from="Player" to="." method="_on_Player_oxygen_picked_up"]
[connection signal="right_foot_grounded" from="Player" to="." method="_on_Player_right_foot_grounded"]
